2017-11-10  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Simplify SwapLinkSep() loop.

	* src/abswordseg.cpp (AbsWordSeg::SwapLinkSep()):
	  - Move en_idx, end_point, tmp vars inside loop
	    where they are used. Only st_idx is left on top level.
	  - No more en_idx assignment at loop end.
	  - Stop en_idx exactly at LinkSep[] element with value -1,
	    not the one after.
	  - Simply assign end_point as saved storage of en_idx value.
	    No computation is needed.
	  - Simply decrement en_idx to get the last non-terminate element.
	    No confusing skip by 2.
	  - Simplify the swap code inside inner while-loop.

2017-11-10  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Set IdxSep[] on every char instead of relying on defaults.

	* src/abswordseg.cpp (AbsWordSeg::CreateWordList()):
	  - Instead of skipping IdxSep[i] assignments and relying on
	    initial values on some chars, let's assign them explicitly.

	* src/abswordseg.cpp (AbsWordSeg::WordSeg()):
	  - Remove now-unneeded InitData() call.
	* src/abswordseg.h, src/abswordseg.cpp (-AbsWordSeg::InitData()):
	  - Remove now-unneeded InitData() method.

2017-11-10  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Add test for mixed text.

	* tests/Makefile.am,
	  +tests/test-mixed.sh, +tests/mixed.txt, +tests/mixed-wseg.txt:
	  - Add test case for text mixed with English text, digits,
	    Thai digits.
	* tests/Makefile.am:
	  - Clear test outputs on 'clean' instead of 'distclean'.

2017-11-10  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Replace for-loop with while-loop.

	text[i] iteration has irregular increments, as decrements
	before continue appear in many places. This indicates
	improper use of for-loop.

	* src/abswordseg.cpp (AbsWordSeg::CreateWordList()):
	  - Replace for-loop with while-loop, and increment the iterator
	    as actually required.
	  - Remove unnecessary decrements.
	  - Rewrite comments and regroup source lines.

2017-11-10  Theppitak Karoonboonyanan <theppitak@gmail.com>